# OOP

CLionProjects/Project1/: CMakeLists.txt  Cheltuiala.c  Cheltuiala.h  Controller.c  Controller.h  UI.c  UI.h  main.c
